--- a/client/ccabello_cliente/src/Inventario/Inventario.css
+++ b/client/ccabello_cliente/src/Inventario/Inventario.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css?family=Josefin+Sans');
+*{
+  font-family: 'Josefin Sans', sans-serif;
+}
+
 #screen{
     display: flex;
     flex-direction: row;
@@ -33,7 +38,9 @@
 
 .ui{
   margin-top: 0;
-  min-width: 94%;
+  min-width: 85%;
+  max-width: 85%;
+  margin-left: 5%;
 }
   
   /* The navigation menu links */
@@ -134,4 +141,27 @@
 
 .menu{
     display: hidden;
+}
+
+#logoInventario{
+  margin-left: 43%;
+  margin-top: 2%;
+  width: 50%;
+}
+
+#headbar{
+  display: flex;
+  flex-direction: row;
+  min-height: 15%;
+}
+
+#userinfo{
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 1%;
+  color: black;
+}
+
+#username{
+  min-width: 90%;
 }
